cli/tests/snapshots/pipeline_negative__pipeline_negative_match_missing_case.snap
---
source: cli/tests/pipeline_negative.rs
expression: output
---
Status: Ok
Diagnostics:
- Error: [F0200] Elaboration error (Type) in 'bad': Unbound variable: Nat
