cli/tests/snapshots/pipeline_negative__pipeline_negative_match_non_inductive_scrutinee.snap
---
source: cli/tests/pipeline_negative.rs
expression: output
---
Status: Ok
Diagnostics:
- Error: [F0205] Elaboration error (Value) in 'bad': Type mismatch: expected inductive type, got Type
