cli/tests/snapshots/pipeline_negative__pipeline_negative_parse_error.snap
---
source: cli/tests/pipeline_negative.rs
expression: output
---
Status: Err
DriverError: ParseValidations(["UnexpectedEof(Span { start: 9, end: 9, line: 1, col: 9 })"])
Diagnostics:
- Error: [F0001] Parse error: UnexpectedEof(Span { start: 9, end: 9, line: 1, col: 9 })
