cli/tests/snapshots/pipeline_negative__pipeline_negative_reserved_primitive_inductive.snap
---
source: cli/tests/pipeline_negative.rs
expression: output
---
Status: Ok
Diagnostics:
- Error: Reserved primitive name 'borrow_shared' must be a prelude axiom, not an inductive declaration
