cli/tests/snapshots/pipeline_negative__pipeline_negative_strict_axiom_tags_accepts_tagged.snap
---
source: cli/tests/pipeline_negative.rs
assertion_line: 264
expression: output
---
Status: Ok
Diagnostics:
- Warning: Axiom 'my_axiom' declared (classical: my_axiom)
