cli/tests/snapshots/pipeline_negative__pipeline_negative_strict_axiom_tags_rejects_untagged.snap
---
source: cli/tests/pipeline_negative.rs
expression: output
---
Status: Ok
Diagnostics:
- Error: Axiom 'my_axiom' must declare at least one tag (classical/unsafe) when --require-axiom-tags is enabled
