cli/tests/snapshots/pipeline_negative__pipeline_negative_type_mismatch.snap
---
source: cli/tests/pipeline_negative.rs
expression: output
---
Status: Ok
Diagnostics:
- Error: [F0214] Elaboration error (Value) in 'bad': Unification failed: (pi x Nat Nat) vs Nat
